Feat Invoices COS-1620: Invoices Table COS-1619: Invoice Preview COS-1694: Contract billing details COS-1695: New service line items edit modal

--- a/packages/apps/spaces/styles/globals.scss
+++ b/packages/apps/spaces/styles/globals.scss
@@ -95,3 +95,12 @@
 .lp_pass {
   display: none !important;
 }
+@keyframes line-animated {
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: 100%;
+  }
+}
