--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.css
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.css
@@ -7,7 +7,7 @@
   flex-direction: column;
 }
 .invoice-invoice-printed {
-  width: 100%;
+  width: 750px;
   height: auto;
   display: flex;
   padding: 16px 20px;
@@ -16,7 +16,7 @@
   flex-shrink: 0;
   border-color: rgba(234, 236, 240, 1);
   border-style: solid;
-  border-width: 0 1px;
+  border-width: 1px 1px;
   flex-direction: column;
   background-color: var(--dl-color-gray-25);
 }
@@ -96,10 +96,10 @@
   border-width: 0.5px 0;
 }
 .invoice-dates {
-  gap: 16px;
+  gap: 5px;
   display: flex;
-  padding: 8px 0;
-  flex-grow: 1;
+  padding: 8px 0px;
+  width: 84px;
   align-self: stretch;
   align-items: flex-start;
   flex-direction: column;
@@ -138,7 +138,8 @@
 .invoice-printed-to {
   gap: 4px;
   display: flex;
-  padding: 8px 12px;
+  width: 340px;
+  padding: 8px 8px;
   flex-grow: 1;
   align-self: stretch;
   align-items: flex-start;
@@ -156,7 +157,8 @@
 .invoice-printed-from {
   gap: 4px;
   display: flex;
-  padding: 8px 12px;
+  width: 340px;
+  padding: 8px 8px;
   flex-grow: 1;
   align-self: stretch;
   align-items: flex-start;
@@ -540,7 +542,7 @@
   gap: 2px;
   display: flex;
   padding: 8px 12px 8px 0;
-  flex-grow: 1;
+  width: 50%;
   align-self: stretch;
   align-items: flex-start;
   border-color: rgba(207, 212, 220, 1);
@@ -557,7 +559,6 @@
   flex-shrink: 0;
 }
 .invoice-payment-details-container {
-  gap: 4px;
   display: flex;
   align-self: stretch;
   align-items: flex-start;
@@ -567,7 +568,7 @@
   gap: 2px;
   display: flex;
   padding: 8px 0 8px 12px;
-  flex-grow: 1;
+  width: 50%;
   align-items: flex-start;
   flex-shrink: 0;
   flex-direction: column;
