fix tests and file reading

--- a/packages/server/events-processing-platform/notifications/email_templates/invoice.paid.mjml
+++ b/packages/server/events-processing-platform/notifications/email_templates/invoice.paid.mjml
@@ -10,8 +10,7 @@
 
     <mj-section padding="20px" background-color="#ffffff">
       <mj-column>
-        <mj-image align="left" width="250px" src={{tenantLogo}}">
-        </mj-image>
+        <mj-image align="left" width="250px" src={{tenantLogo}}></mj-image>
         <mj-text>
           <p>Hi {{userFirstName}},</p>
           <p>Attached is your <b>paid invoice</b> {{invoiceNumber}} for {{currencySymbol}}{{amtDue}}.</p>
