Invoice PDF generation - VAT

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.css
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.css
@@ -249,6 +249,10 @@
   box-sizing: border-box;
 }
 
+.invoice-with-vat-column-size {
+  flex: 1 0 25%!important;
+}
+
 .pr-0 {
     padding-right: 0px;
 }
