--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.css
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.css
@@ -464,7 +464,7 @@
   flex-shrink: 0;
   border-color: var(--dl-color-gray-300);
   border-style: solid;
-  border-width: 0.5px 0;
+  border-width: 0 0 0.5px 0;
 }
 .invoice-printed-dates1 {
   gap: 2px;
