Fix multiline invoice

--- a/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.css
+++ b/packages/server/events-processing-platform/subscriptions/invoice/pdf_template/index.css
@@ -190,6 +190,7 @@
   align-self: stretch;
   align-items: flex-end;
   flex-direction: column;
+  width: 100%;
 }
 .invoice-table-container {
   display: flex;
