(fix|COS-2384): Fix Slack message formatting and invoice preview issues
- Resolve formatting issues in Slack messages.
- Use CDN logo in invoice previews.
- Replace spaces with '-' in the email field on blur for the 'Send Email' input value.

--- a/packages/apps/spaces/styles/remirror-editor.scss
+++ b/packages/apps/spaces/styles/remirror-editor.scss
@@ -744,6 +744,9 @@ span.slack_code {
   color: var(--chakra-colors-rose-500);
   width: fit-content;
   padding: 0 0.25em;
+  a {
+    font-family: var(--chakra-fonts-body);
+  }
 }
 
 .slack_code {
