--- a/packages/server/events-processing-platform-subscribers/subscriptions/invoice/pdf_template/index.css
+++ b/packages/server/events-processing-platform-subscribers/subscriptions/invoice/pdf_template/index.css
@@ -451,7 +451,6 @@
   line-height: 20px;
 }
 .invoice-printed-frame44433 {
-  gap: 16px;
   display: flex;
   align-self: stretch;
   align-items: flex-start;
@@ -460,17 +459,20 @@
 }
 .invoice-printed-frame3615 {
   display: flex;
+  flex-direction: column;
   align-self: stretch;
   align-items: flex-start;
   flex-shrink: 0;
+  width: 100%;
+  padding: 8px 12px;
   border-color: var(--dl-color-gray-300);
   border-style: solid;
-  border-width: 0 0 0.5px 0;
+  border-width: 0.5px 0 0 0;
 }
 .invoice-printed-dates1 {
   gap: 2px;
   display: flex;
-  padding: 8px 12px 8px 0;
+  padding: 8px 0 0 0;
   width: 50%;
   align-self: stretch;
   align-items: flex-start;
@@ -486,6 +488,7 @@
 }
 .invoice-payment-details-container {
   display: flex;
+  flex-direction: column;
   align-self: stretch;
   align-items: flex-start;
   flex-shrink: 0;
@@ -507,6 +510,10 @@
   display: flex;
   align-items: flex-start;
   flex-direction: row;
+  border-color: var(--dl-color-gray-300);
+  border-style: solid;
+  border-width: 0.5px 0 0 0;
+  padding-top: 16px;
 }
 .invoice-printed-customeros {
   display: flex;
